# rustyms

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-MIT  README.md  api_summary.md  build.rs  clippy.toml  index.html  license.md  proforma_grammar.md  readme.md
.devcontainer/: devcontainer.json
benches/: alignment.rs  iai.rs
data/: 20201023_L1_VQ1_Tamar002_SA_CI49_T3_S_IgA_prep1_rep1_ETD16_TCEP_strict_LC_combined_extended.mgf  F4_6826.html  annotated_example.mgf  data.txt  example.mgf  theoretical_matches_hecklib.json
databases/: IUPAC-atomic-masses.csv  unimod.xml
examples/: README.md  (+2 more)
examples/de-novo-align/: Cargo.toml  README.md  database.fasta
examples/de-novo-align/src/: main.rs
examples/multi-annotator/: Cargo.toml  README.md
examples/multi-annotator/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: peaks.rs  pro_forma.rs  sloppy_pro_forma.rs
fuzz/in/: 0  1  10  12  14  15  2  3  6  9
fuzz/in_peaks/: 11.csv  11_custom.csv  ab.csv  x.csv  x_plus.csv
fuzz/in_pro_forma/: 11  13  4  5  8
rustyms/: Cargo.toml  README.md  build.rs
rustyms-align/: Cargo.toml
rustyms-align/benches/: iai.rs
rustyms-align/src/: align_type.rs  alignment.rs  consecutive.rs  diagonal_array.rs  lib.rs  mass_alignment.rs  piece.rs  scoring.rs
rustyms-align/src/matrices/: identity.txt
rustyms-generate-databases/: Cargo.toml  README.md
rustyms-generate-databases/data/: CIAAW-atomic-weights.csv  CIAAW-isotopic-abundances.csv  IUPAC-atomic-masses.csv  PSI-MOD-newstyle.obo  RESID-RESIDUES.XML
rustyms-generate-databases/src/: atomic_masses.rs  glycan.rs  gnome.rs  main.rs  obo.rs  ontology_modification.rs  psi_mod.rs  resid.rs  unimod.rs  xlmod.rs
rustyms-generate-imgt/: Cargo.toml
rustyms-generate-imgt/src/: combine.rs  imgt_gene.rs  main.rs  parse.rs  structs.rs
rustyms-identification/: Cargo.toml
rustyms-identification/src/: common_parser.rs  lib.rs  maxquant.rs  maxquant_tests.rs  novor_tests.rs  opair_tests.rs  peaks_tests.rs
rustyms-imgt/: Cargo.toml
rustyms-imgt-generate/: Cargo.toml
rustyms-imgt-generate/src/: combine.rs  imgt_gene.rs  main.rs  parse.rs  structs.rs
rustyms-imgt/src/: fancy.rs  lib.rs  select.rs
rustyms-imgt/src/germlines/: germlines.md  mod.rs
rustyms-imgt/src/shared/: regions.rs  species.rs
rustyms-py/: CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
rustyms-py/src/: lib.rs
rustyms/benches/: iai.rs
rustyms/data/: 200305_HER_test_04_DENOVO_exceprt.csv  annotated_example.mgf  example.mgf  glycan.mgf  inter_link.mgf  intra_link.mgf  real_example.mgf  stuff.mgf
rustyms/src/: ambiguous_label.rs  aminoacid_pka.rs  aminoacid_properties.rs  aminoacids.rs  checked_aminoacid.rs  complex_peptide.rs  compound_peptidoform.rs  element.rs  formula.rs  formula_search.rs  fragment.rs  fragmentation.rs  fragmentation_tests.rs  glycan.rs  helper_functions.rs  isobaric_sets.rs  isotopes.rs  itertools_extension.rs  lib.rs  linear_peptide.rs  mass_mode.rs  model.rs  modification.rs  molecular_charge.rs  multi.rs  multi_formula.rs  mzpaf.rs  neutral_loss.rs  ontologies.rs  peptide_complexity.rs  peptidoform.rs  placement_rule.rs  pro_forma_parse_tests.rs  protease.rs  rand.rs  sequence_element.rs  spectrum.rs  system.rs  tolerance.rs
rustyms/src/align/: align_type.rs  alignment.rs  bad_alignments.rs  consecutive.rs  diagonal_array.rs  itertools_extension.rs  mass_alignment.rs  mod.rs  multi_alignment.rs  scoring.rs  test_alignments.rs
rustyms/src/align/matrices/: blosum50.txt  blosum62.txt  blosum80.txt  blosum90.txt  pam30.txt  pam70.txt
rustyms/src/error/: context.rs  custom_error.rs  mod.rs
rustyms/src/glycan/: glycan_structure.rs  mod.rs  monosaccharide.rs  positioned_structure.rs  render.rs
rustyms/src/identification/: annotated.rs  cascadia.rs  cascadia_tests.rs  common_parser.rs  deepnovo.rs  deepnovo_tests.rs  deepnovofamily.rs  deepnovofamily_tests.rs  fasta.rs  general.rs  helper_functions.rs  identified_peptide.rs  instanovo.rs  instanovo_tests.rs  maxquant.rs  maxquant_tests.rs  mod.rs  msfragger.rs  msfragger_tests.rs  mztab.rs  mztab_test.rs  novob.rs  novob_tests.rs  novor.rs  novor_tests.rs  opair.rs  opair_tests.rs  peaks.rs  peaks_tests.rs  pepnet.rs  pepnet_tests.rs  plgs.rs  plgs_tests.rs  plink.rs  plink_tests.rs  powernovo.rs  powernovo_tests.rs  sage.rs  sage_tests.rs  ssl.rs  (+1 more)
rustyms/src/identification/peaks_fuzz_tests/: crash_0  hang_0  hang_1  hang_10  hang_11  hang_12  hang_13  hang_14  hang_15  hang_16  hang_17  hang_18  hang_19  hang_2  hang_20  hang_21  hang_22  hang_23  hang_24  hang_25  hang_26  hang_3  hang_4  hang_5  hang_6  hang_7  hang_8  hang_9
rustyms/src/identification/test_files/: msfragger_v21.tsv  sage_v0_14.tsv
rustyms/src/imgt/: fancy.rs  mod.rs  select.rs
rustyms/src/imgt/germlines/: germlines.md  mod.rs  mod_new.rs
rustyms/src/imgt/shared/: mod.rs  regions.rs  species.rs
rustyms/src/peptide/: annotated.rs  complexity.rs  compound_peptidoform.rs  find_modifications.rs  linear_peptide.rs  mod.rs  parse.rs  parse_modification.rs  parse_sloppy.rs  peptide_complexity.rs  peptidoform.rs  pro_forma_parse_tests.rs  tests.rs  validate.rs
rustyms/src/peptide/tests/: fuzz_crash.rs  fuzz_hang.rs  mod.rs  parse.rs  pro_forma_positive.rs  sloppy.rs
rustyms/src/peptidoform/: annotated.rs  compound_peptidoform_ion.rs  find_modifications.rs  linear_peptide.rs  mod.rs  parse.rs  parse_modification.rs  parse_sloppy.rs  peptidoform_ion.rs  validate.rs
rustyms/src/peptidoform/tests/: fuzz_hang.rs  mod.rs  parse.rs  pro_forma_negative.rs  pro_forma_positive.rs  sloppy.rs
rustyms/src/rawfile/: mgf.rs  mod.rs
rustyms/src/shared/: aminoacid.rs  csv.rs  element.rs  formula.rs  glycan.rs  glycan_lists.rs  glycan_structure.rs  modification.rs  multi.rs  neutral_loss.rs  ontology.rs  placement_rule.rs  sequence_position.rs
rustyms/src/shared/formula/: mod.rs  mz_paf.rs  pro_forma.rs  psi_mod.rs  resid.rs  structure.rs  unimod.rs  xlmod.rs
rustyms/src/spectrum/: annotated.rs  fdr.rs  fragmentation.rs  mod.rs  mzdata.rs  peaks.rs  raw.rs  scores.rs
(+109 files in other folders)
