[workspace]
members = ["rustyms", "rustyms-imgt-generate", "rustyms-py", "fuzz"]
resolver = "2"

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
# bench profile inherits from release so only change the release settings

[workspace.dependencies]
afl = "0.15"
bincode = "1.3"
flate2 = "1.0"
iai-callgrind = "0.13"
itertools = "0.13"
mzdata = "0.28.1"
ndarray = "0.16"
ordered-float = { version = "4.2", features = ["serde"] }
probability = "0.20"
pyo3 = "0.22"
rand = "0.8.5"
rayon = "1.9"
regex = "1.8"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
similar = "2.4"
uom = { version = "0.36", features = ["use_serde", "usize", "isize"] }
