[workspace]
members = [
    "rustyms",
    "rustyms-generate-databases",
    "rustyms-generate-imgt",
    "rustyms-py",
    "fuzz",
    "examples/*",
]
resolver = "2"
package.authors = ["Douwe Schulte <d.schulte@uu.nl>", "Ralf Gabriels"]
package.edition = "2021"
package.license = "MIT OR Apache-2.0"
package.rust-version = "1.75.0"
package.version = "0.9.0-alpha.2"

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
# bench profile inherits from release so only change the release settings

[workspace.dependencies]
afl = "0.15"
bincode = "1.3"
clap = "4.5"
directories = "5.0"
flate2 = "1.0"
iai-callgrind = "0.13"
itertools = "0.13"
mzdata = "0.29"
ndarray = "0.16"
ordered-float = { version = "4.2", features = ["serde"] }
probability = "0.20"
pyo3 = "0.22"
rand = "0.8.5"
rayon = "1.9"
regex = "1.8"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
similar = "2.6"
uom = { version = "0.36", features = ["use_serde", "usize", "isize"] }
