[workspace]
members = [
    "rustyms",
    "rustyms-generate-databases",
    "rustyms-generate-imgt",
    "rustyms-py",
    "fuzz",
    "examples/*",
]
resolver = "2"
package.authors = [
    "Douwe Schulte <d.schulte@uu.nl>",
    "Ralf Gabriels",
    "Auke Heerdink",
]
package.edition = "2021"
package.license = "MIT OR Apache-2.0"
package.rust-version = "1.84.0"
package.version = "0.9.0"

[profile.release]
debug = true
opt-level = 3
lto = true
codegen-units = 1
# Bench profile inherits from release so only change the release settings

[workspace.dependencies]
afl = "0.15"
bincode = "1.3"
clap = { version = "4.5", features = ["derive", "cargo"] }
directories = "6.0"
flate2 = "1.0"
iai-callgrind = "0.14"
itertools = "0.14"
mzdata = "0.41"
ndarray = "0.16"
ordered-float = { version = "4.6", features = ["serde"] }
probability = "0.20"
pyo3 = "0.23"
rand = "0.8"
rayon = "1.10"
regex = "1.11"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
similar = "2.7"
thin-vec = { version = "0.2", features = ["serde"] }
uom = { version = "0.36", features = ["use_serde", "usize", "isize"] }
