[package]
name = "rustyms-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
afl = "*"
rustyms = { path = "../rustyms" }

[[bin]]
name = "pro_forma"
path = "fuzz_targets/pro_forma.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sloppy_pro_forma"
path = "fuzz_targets/sloppy_pro_forma.rs"
test = false
doc = false
bench = false

[[bin]]
name = "peaks"
path = "fuzz_targets/peaks.rs"
test = false
doc = false
bench = false

# in root dir
# cargo afl build --release -p rustyms-fuzz
# cargo afl fuzz -i fuzz/in -o out_pro_forma target/release/pro_forma
# open out_pro_forma/default/crashes/* | save crashes.txt -f
# cat out_pro_forma/default/crashes/* >> crashes.txt
