[package]
name = "rustyms-fuzz"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
afl = { workspace = true }
rustyms = { path = "../rustyms" }

[[bin]]
name = "pro_forma"
path = "fuzz_targets/pro_forma.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sloppy_pro_forma"
path = "fuzz_targets/sloppy_pro_forma.rs"
test = false
doc = false
bench = false

[[bin]]
name = "peaks"
path = "fuzz_targets/peaks.rs"
test = false
doc = false
bench = false

[lints]
workspace = true
