[package]
name = "rustyms-generate-databases"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
bincode = { workspace = true }
flate2 = { workspace = true }
itertools = { workspace = true }
ordered-float = { workspace = true }
regex = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true }
similar = { workspace = true }
thin-vec = { workspace = true }
uom = { workspace = true }

[features]
rayon = []

[lints]
workspace = true
