[package]
name = "rustyms-generate-imgt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
bincode = { workspace = true }
itertools = { workspace = true }
rustyms = { path = "../rustyms", default-features = false, features = [
    "align",
] }
serde = { workspace = true, features = ["derive", "rc"] }
similar = { workspace = true }

[features]
rayon = []
