[package]
name = "rustyms-identification"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
description = "Handling identification file formats."
categories = ["science"]
keywords = ["spectra", "massspectrometry", "bio", "fragmentation", "proforma"]
repository = "https://github.com/snijderlab/rustyms"
readme = "../README.md"
include = ["src/**/*", "databases/**/*", "LICENSE", "README.md", "build.rs"]
rust-version = "1.70.0"

[dependencies]
itertools = "0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
uom = { version = "0.35", features = ["use_serde", "usize"] }
ordered-float = { version = "4.2", features = ["serde"] }
rustyms-core = { path = "../rustyms-core" }
