[package]
name = "rustyms-imgt-generate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
rust-version = "1.70.0"

[dependencies]
bincode = "1.3"
itertools = "0.12"
rustyms = { path = "../rustyms" }
serde = { version = "1.0", features = ["derive", "rc"] }
similar = "2.4"
