[package]
name = "rustyms-imgt-generate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
rust-version = "1.70.0"

[dependencies]
bincode = { workspace = true }
itertools = { workspace = true }
rustyms = { path = "../rustyms" }
serde = { workspace = true, features = ["derive", "rc"] }
similar = { workspace = true }
