[package]
name = "rustyms-imgt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Douwe Schulte <d.schulte@uu.nl>"]
rust-version = "1.70.0"

[dependencies]
bincode = "1.3"
itertools = "0.12"
rayon = { version = "1.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
rustyms-core = { path = "../rustyms-core" }

[features]
default = ["rayon"]
