[package]
name = "rustyms-py"
version = "0.9.0-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustyms_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
rustyms = { path = "../rustyms" }
ordered-float = { workspace = true, features = ["serde"] }
