[package]
name = "rustyms-py"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustyms_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
rustyms = { path = "../rustyms" }
ordered-float = { workspace = true, features = ["serde"] }
