[package]
name = "rustyms-py"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true

[lib]
name = "rustyms_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
rustyms = { path = "../rustyms" }
ordered-float = { workspace = true, features = ["serde"] }
