[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rustyms"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
description = "A library to handle proteomic mass spectrometry data and match peptides to spectra."
license = {text = "MIT OR Apache-2.0"}

[project.urls]
Homepage = "https://github.com/snijderlab/rustyms"
Documentation = "https://rustyms.readthedocs.io/"
Repository = "https://github.com/snijderlab/rustyms.git"

[project.optional-dependencies]
dev = ["maturin"]
docs = [
    "sphinx",
    "numpydoc>=1,<2",
    "myst-parser",
    "sphinx_rtd_theme",
    "sphinx-autobuild",
    "sphinx-automodapi",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rustyms"
