[package]
name = "de-novo-align"
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
rustyms = { path = "../../rustyms" }
clap = { workspace = true, features = ["derive", "cargo"] }
itertools = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
