[package]
name = "multi-annotator"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rustyms = { path = "../../rustyms" }
clap = { workspace = true, features = ["derive", "cargo"] }
directories = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
